add markup for html, add imgs directory with photos

--- a/index.html
+++ b/index.html
@@ -5,11 +5,199 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lesson1</title>
+    <title>shop</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <header>
+        <img src="imgs/logo.svg" alt="logo" width="44" height="38">
+        <img src="imgs/loupe.svg" alt="loupe" width="26" height="27">
+        <button type="button"><img src="imgs/burger.svg" alt="burger" width="32" height="23"></button>
+        <a href="#"><img src="imgs/reg.svg" alt="registarion"></a>
+        <a href="#"><img src="imgs/cart.svg" alt="cart"></a>
+        <!--здесь с помощью JS будет отображаться количество товаров в корзине-->
+        <img src="imgs/cart-list.svg" alt="cart-list">
+        <nav>
+            <h2>menu</h2>
+            <ul>
+                <li>
+                    <a href="#">man</a>
+                    <ul>
+                        <li><a href="#">Accessories</a></li>
+                        <li><a href="#">Bags</a></li>
+                        <li><a href="#">Denim</a></li>
+                        <li><a href="#">T-Shirts</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">woman</a>
+                    <ul>
+                        <li><a href="#">Accessories</a></li>
+                        <li><a href="#">Jackets & Coats</a></li>
+                        <li><a href="#">Polos</a></li>
+                        <li><a href="#">T-Shirts</a></li>
+                        <li><a href="#">Shirts</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">kids</a>
+                    <ul>
+                        <li><a href="#">Accessories</a></li>
+                        <li><a href="#">Jackets & Coats</a></li>
+                        <li><a href="#">Polos</a></li>
+                        <li><a href="#">T-Shirts</a></li>
+                        <li><a href="#">Shirts</a></li>
+                        <li><a href="#">Bags</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h1>The Brand of luxerious fashion</h1>
+            <img src="imgs/man-title.jpg" alt="man-title" width="800" height="765">
+            <img src="imgs/stick.jpg" alt="stick" width="12" height="92">
+            <!--при клике на FASHION будет ввести на весь каталог товаров, я так понимаю все что розовое на странице это все юзабильное, хорошо для СЕО будет.-->
+            <p>THE BRAND OF LUXERIOUS <a href="#">FASHION</a></p>
+        </section>
+        <section>
+            <h2>Stocks</h2>
+            <ul>
+                <li>
+                    <img src="imgs/art1.jpg" alt="art1" width="360" height="260">
+                    <a href="#">
+                        <p>30% off</p>
+                        <h3>for woman</h3>
+                    </a>
+                </li>
+                <li>
+                    <img src="imgs/art2.jpg" alt="art2" width="360" height="260">
+                    <a href="#">
+                        <p>hot deal</p>
+                        <h3>for men</h3>
+                    </a>
+                </li>
+                <li>
+                    <img src="imgs/art3.jpg" alt="art3" width="360" height="260">
+                    <a href="#">
+                        <p>new arrivals</p>
+                        <h3>for kids</h3>
+                    </a>
+                </li>
+                <li>
+                    <img src="imgs/art4.jpg" alt="art4" width="1140" height="180">
+                    <a href="#">
+                        <p>luxirous & trendy</p>
+                        <h3>accesories</h3>
+                    </a>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Fetured Items</h2>
+            <p>Shop for items based on what we feaured in this week</p>
+            <ul>
+                <li>
+                    <img src="imgs/card1.jpg" alt="card1" width="360" height="420">
+                    <h3>ELLERY X M'O CAPSULE</h3>
+                    <p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery
+                        teams up with Moda Operandi.</p>
+                    <p>$52.00</p>
+                    <button type="button"><img src="imgs/add-cart.svg">Add to Cart</button>
+                </li>
+                <li>
+                    <img src="imgs/card2.jpg" alt="card1" width="360" height="420">
+                    <h3>ELLERY X M'O CAPSULE</h3>
+                    <p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery
+                        teams up with Moda Operandi.</p>
+                    <p>$52.00</p>
+                    <button type="button"><img src="imgs/add-cart.svg">Add to Cart</button>
+                </li>
+                <li>
+                    <img src="imgs/card3.jpg" alt="card1" width="360" height="420">
+                    <h3>ELLERY X M'O CAPSULE</h3>
+                    <p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery
+                        teams up with Moda Operandi.</p>
+                    <p>$52.00</p>
+                    <button type="button"><img src="imgs/add-cart.svg">Add to Cart</button>
+                </li>
+                <li>
+                    <img src="imgs/card4.jpg" alt="card1" width="360" height="420">
+                    <h3>ELLERY X M'O CAPSULE</h3>
+                    <p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery
+                        teams up with Moda Operandi.</p>
+                    <p>$52.00</p>
+                    <button type="button"><img src="imgs/add-cart.svg">Add to Cart</button>
+                </li>
+                <li>
+                    <img src="imgs/card5.jpg" alt="card1" width="360" height="420">
+                    <h3>ELLERY X M'O CAPSULE</h3>
+                    <p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery
+                        teams up with Moda Operandi.</p>
+                    <p>$52.00</p>
+                    <button type="button"><img src="imgs/add-cart.svg">Add to Cart</button>
+                </li>
+                <li>
+                    <img src="imgs/card6.jpg" alt="card1" width="360" height="420">
+                    <h3>ELLERY X M'O CAPSULE</h3>
+                    <p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery
+                        teams up with Moda Operandi.</p>
+                    <p>$52.00</p>
+                    <button type="button"><img src="imgs/add-cart.svg">Add to Cart</button>
+                </li>
+            </ul>
+            <a href="#">Browse All Product</a>
+        </section>
+        <section>
+            <h2>Sales & discounts</h2>
+            <ul>
+                <li><img src="imgs/car.svg" alt="car" width="45" height="32">
+                    <h3>Free Delivery</h3>
+                    <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive
+                        models.</p>
+                </li>
+                <li>
+                    <img src="imgs/percent.svg" alt="percent" width="40" height="40">
+                    <h3>Sales & discounts</h3>
+                    <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive
+                        models.</p>
+                </li>
+                <li>
+                    <img src="imgs/crown.svg" alt="crown" width="47" height="35">
+                    <h3>Quality assurance</h3>
+                    <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive
+                        models.</p>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <section>
+            <h2>Reviews</h2>
+            <img src="imgs/girl.jpg" alt="girl" width="96" height="96">
+            <p>“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“</p>
+        </section>
+        <section>
+            <h3>SUBSCRIBE</h3>
+            <p>FOR OUR NEWLETTER AND PROMOTION</p>
+            <form action="#">
+                <input type="text" placeholder="Enter Your Email">
+                <input type="submit" value="Subscribe">
+            </form>
+        </section>
+        <section>
+            <h2>copyright</h2>
+            <p>© 2021 Brand All Rights Reserved.</p>
+            <ul>
+                <li><a href="#"><img src="imgs/facebook.svg" alt="facebook" width="32" height="32"></a></li>
+                <li><a href="#"><img src="imgs/instagram.svg" alt="instagram" width="32" height="32"></a></li>
+                <li><a href="#"><img src="imgs/pinterest.svg" alt="pinterest" width="32" height="32"></a></li>
+                <li><a href="#"><img src="imgs/twitter.svg" alt="twitter" width="32" height="32"></a></li>
+            </ul>
+        </section>
+    </footer>
 </body>
 
 </html>
