--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@
         <section>
             <h1>The Brand of luxerious fashion</h1>
             <img src="imgs/man-title.jpg" alt="man-title" width="800" height="765">
-            <img src="imgs/stick.jpg" alt="stick" width="12" height="92">
             <!--при клике на FASHION будет ввести на весь каталог товаров, я так понимаю все что розовое на странице это все юзабильное, хорошо для СЕО будет.-->
-            <p>THE BRAND OF LUXERIOUS <a href="#">FASHION</a></p>
+            <p>the brand of luxerious <a href="#">fashion</a></p>
         </section>
         <section>
             <h2>Stocks</h2>
@@ -151,7 +150,7 @@
             <a href="#">Browse All Product</a>
         </section>
         <section>
-            <h2>Sales & discounts</h2>
+            <h2>sales & discounts</h2>
             <ul>
                 <li><img src="imgs/car.svg" alt="car" width="45" height="32">
                     <h3>Free Delivery</h3>
@@ -175,12 +174,12 @@
     </main>
     <footer>
         <section>
-            <h2>Reviews</h2>
+            <h2>reviews</h2>
             <img src="imgs/girl.jpg" alt="girl" width="96" height="96">
             <p>“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“</p>
         </section>
         <section>
-            <h3>SUBSCRIBE</h3>
+            <h3>subscribe</h3>
             <p>FOR OUR NEWLETTER AND PROMOTION</p>
             <form action="#">
                 <input type="text" placeholder="Enter Your Email">
