--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 <h3 class="footer__subscribe-heading">subscribe</h3>
                 <p class="footer__subscribe-text">FOR OUR NEWLETTER AND PROMOTION</p>
                 <form class="footer__subscribe-form" action="#">
-                    <input class="subscribe__form-area" type="mail" placeholder="Enter Your Email">
+                    <input class="subscribe__form-area" type="email" placeholder="Enter Your Email" required>
                     <button class="subscribe__form-button" type="submit">Subscribe</button>
                 </form>
             </section>
