--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="css/modal.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400&display=swap"
         rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
 
 </head>
 
@@ -25,7 +27,7 @@
             <div>
                 <button class="header__menu-button" id="burger" type="button"><img src="imgs/burger.svg" alt="burger"
                         width="32" height="23"></button>
-                <a class="header__link" href="#"><img src="imgs/reg.svg" alt="registarion"></a>
+                <a class="header__link" href="registration.html"><img src="imgs/reg.svg" alt="registarion"></a>
                 <a class="header__link header__link-position" href="#"><img src="imgs/cart.svg" alt="cart">
                     <img class="header__cartlist" src="imgs/cart-list.svg" alt="cart-list"></a>
                 <!--здесь с помощью JS будет отображаться количество товаров в корзине-->
@@ -242,7 +244,7 @@
         </section>
 
     </footer>
-    <script src="scripts/modal.js"></script>
+    <script src="scripts/modal-index.js"></script>
 </body>
 
 </html>
