--- a/registration.html
+++ b/registration.html
@@ -6,10 +6,159 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>registration</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/registration.css">
+    <link rel="stylesheet" href="css/animations.css">
+    <link rel="stylesheet" href="css/modal.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <header class="header">
+        <div class="header__wrapper container">
+            <div>
+                <a href="index.html"><img class="header__logo" src="imgs/logo.svg" alt="logo" width="44"
+                        height="38"></a>
+                <img class="header__loupe" src="imgs/loupe.svg" alt="loupe" width="26" height="27">
+            </div>
+            <div>
+                <button class="header__menu-button" id="burger" type="button"><img src="imgs/burger.svg" alt="burger"
+                        width="32" height="23"></button>
+                <a class="header__link" href="#"><img src="imgs/reg.svg" alt="registarion"></a>
+                <a class="header__link header__link-position" href="#"><img src="imgs/cart.svg" alt="cart">
+                    <img class="header__cartlist" src="imgs/cart-list.svg" alt="cart-list"></a>
+                <!--здесь с помощью JS будет отображаться количество товаров в корзине-->
 
+                <nav class="header__navigation--none" id="menu">
+                    <button class="header__navigation-button" id="close"><img src="imgs/close-menu.svg"
+                            alt="close"></button>
+                    <h2 class="header__navigation-title">menu</h2>
+                    <ul class="header__navigation-list">
+                        <li class="header__navigation-item navigation-item">
+                            <a class="navigation-item__link" href="#">man</a>
+                            <ul class="navigation-item__sublist">
+                                <li><a class="navigation-item__sublist-link" href="#">Accessories</a></li>
+                                <li><a class="navigation-item__sublist-link" href="#">Bags</a></li>
+                                <li><a class="navigation-item__sublist-link" href="#">Denim</a></li>
+                                <li><a class="navigation-item__sublist-link" href="#">T-Shirts</a></li>
+                            </ul>
+                        </li>
+                        <li class="header__navigation-item navigation-item">
+                            <a class="navigation-item__link" href="#">woman</a>
+                            <ul class="navigation-item__sublist">
+                                <li><a class="navigation-item__sublist-link" href="#">Accessories</a></li>
+                                <li><a class="navigation-item__sublist-link" href="#">Jackets & Coats</a></li>
+                                <li><a class="navigation-item__sublist-link" href="#">Polos</a></li>
+                                <li><a class="navigation-item__sublist-link" href="#">T-Shirts</a></li>
+                                <li><a class="navigation-item__sublist-link" href="#">Shirts</a></li>
+                            </ul>
+                        </li>
+                        <li class="header__navigation-item navigation-item">
+                            <a class="navigation-item__link" href="#">kids</a>
+                            <ul class="navigation-item__sublist">
+                                <li><a class="navigation-item__sublist-link" href="#">Accessories</a></li>
+                                <li><a class="navigation-item__sublist-link" href="#">Jackets & Coats</a></li>
+                                <li><a class="navigation-item__sublist-link" href="#">Polos</a></li>
+                                <li><a class="navigation-item__sublist-link" href="#">T-Shirts</a></li>
+                                <li><a class="navigation-item__sublist-link" href="#">Shirts</a></li>
+                                <li><a class="navigation-item__sublist-link" href="#">Bags</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <main>
+        <section class="heading__block">
+            <div class="heading__wrapper container">
+                <h1 class="heading__block-heading">registarion</h1>
+            </div>
+        </section>
+        <section class="registarion__block container">
+            <div class="registarion__wrapper-form">
+                <form class="registarion__form" action="endpoint" class="form">
+                    <fieldset class="form__block">
+                        <legend class="form__block-text">Your Name</legend>
+                        <input class="form__block-info" pattern="^[ёЁа-яА-Яa-zA-Z]+$" type="text"
+                            placeholder="First Name" required>
+                        <input class="form__block-info" pattern="^[ёЁа-яА-Яa-zA-Z]+$" type="text"
+                            placeholder="Last Name" required>
+                        <div class="form__block-wrapper">
+                            <input class="block__wrapper-radio" type="radio" id="male" name="sex" value="Male">
+                            <label class="block__wrapper-label" for="male">Male</label>
+                            <input class="block__wrapper-radio" type="radio" id="female" name="sex" value="Female">
+                            <label class="block__wrapper-label" for="female">Female</label>
+                        </div>
+                    </fieldset>
+                    <fieldset class="form__block">
+                        <legend class="form__block-text">Login details</legend>
+                        <input class="form__block-info" type="email" placeholder="Email" required>
+                        <input class="form__block-info" type="password" placeholder="Password" required>
+                    </fieldset>
+                    <p class="registarion__form-text">Please use 8 or more characters, with at least 1 number and a
+                        mixture of uppercase and lowercase
+                        letters</p>
+                    <button class="registarion__form-button">JOIN NOW</button>
+                </form>
+            </div>
+            <div class="registarion__block-perks">
+                <p class="perks-heading">loyalty has its perks</p>
+                <p class="perks-text">Get in on the loyalty program where you can earn points and unlock serious perks.
+                    Starting with these
+                    as soon as you join:</p>
+                <ul class="perks__wrapper-list">
+                    <li class="list__perks-item">15% off welcome offer</li>
+                    <li class="list__perks-item">Free shipping, returns and exchanges on all orders</li>
+                    <li class="list__perks-item">$10 off a purchase on your birthday</li>
+                    <li class="list__perks-item">Early access to products</li>
+                    <li class="list__perks-item">Exclusive offers & rewards</li>
+                </ul>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+
+        <div class="footer__wrap container">
+            <section class="footer__quote">
+                <h2 class="visually-hidden">reviews</h2>
+                <img class="footer__quote-img" src="imgs/girl.png" alt="girl" width="96" height="96">
+                <p class="footer__quote-text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus
+                    condimentum“</p>
+            </section>
+            <section class="footer__subscribe ">
+                <h3 class="footer__subscribe-heading">subscribe</h3>
+                <p class="footer__subscribe-text">FOR OUR NEWLETTER AND PROMOTION</p>
+                <form class="footer__subscribe-form" action="#">
+                    <input class="subscribe__form-area" type="email" placeholder="Enter Your Email" required>
+                    <button class="subscribe__form-button" type="submit">Subscribe</button>
+                </form>
+            </section>
+        </div>
+        <section class="footer__info">
+            <div class="footer__info-wrap container">
+                <h2 class="visually-hidden">copyright</h2>
+                <p class="footer__info-copy">© 2021 Brand All Rights Reserved.</p>
+
+                <ul class="footer__socials-list">
+                    <li class="footer__socials-item"><a href="#"><img src="imgs/facebook.svg" alt="facebook" width="32"
+                                height="32"></a></li>
+                    <li class="footer__socials-item"><a href="#"><img src="imgs/instagram.svg" alt="instagram"
+                                width="32" height="32"></a></li>
+                    <li class="footer__socials-item"><a href="#"><img src="imgs/pinterest.svg" alt="pinterest"
+                                width="32" height="32"></a></li>
+                    <li class="footer__socials-item"><a href="#"><img src="imgs/twitter.svg" alt="twitter" width="32"
+                                height="32"></a></li>
+                </ul>
+            </div>
+        </section>
+
+    </footer>
+    <script src="scripts/modal-registration.js"></script>
 </body>
 
 </html>
