was created scss directory// all css fiels were compiled in scss and were sorted out on logic blocks

--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>shop</title>
-    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/animations.css">
-    <link rel="stylesheet" href="css/modal.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400&display=swap"
         rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -32,7 +29,7 @@
                     <img class="header__cartlist" src="imgs/cart-list.svg" alt="cart-list"></a>
                 <!--здесь с помощью JS будет отображаться количество товаров в корзине-->
 
-                <nav class="header__navigation--none" id="menu">
+                <nav class="header__navigation header__navigation-none" id="menu">
                     <button class="header__navigation-button" id="close"><img src="imgs/close-menu.svg"
                             alt="close"></button>
                     <h2 class="header__navigation-title">menu</h2>
