--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
                 <button class="header__menu-button" id="burger" type="button"><img src="imgs/burger.svg" alt="burger"
                         width="32" height="23"></button>
                 <a class="header__link" href="registration.html"><img src="imgs/reg.svg" alt="registarion"></a>
-                <a class="header__link header__link-position" href="#"><img src="imgs/cart.svg" alt="cart">
+                <a class="header__link header__link-position" href="cart.html"><img src="imgs/cart.svg" alt="cart">
                     <img class="header__cartlist" src="imgs/cart-list.svg" alt="cart-list"></a>
                 <!--здесь с помощью JS будет отображаться количество товаров в корзине-->
-
                 <nav class="header__navigation header__navigation-none" id="menu">
                     <button class="header__navigation-button" id="close"><img src="imgs/close-menu.svg"
                             alt="close"></button>
